--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+page-top-title: Kaibing Yang
+top-section-bg-text: Artificial Intelligence
+home-subtitle: Kaibing Yang&enfp;|&ensp;杨凯冰
+copyright-text: '&copy; Kaibing Yang 2024-2025. All Rights Reserved.'
