--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,4 +1,4 @@
-title: Sen Li's Homepage
+title: Kaibing YAng's Homepage
 page-top-title: Kaibing Yang
 top-section-bg-text: Artificial Intelligence
 home-subtitle: Kaibing Yang&enfp;|&ensp;杨凯冰
